[package]
name = "megasync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
web3 = "0.17.0"
tokio = { version = "1.0", features = ["full"] }
hex-literal = "0.3"
serde = "1.0.130"
serde_json = "1.0.68"
secp256k1 = "0.20.3"
env_logger = "0.9.0"
log = "0.4.14"
